# bl-protokollbuch

./: .gitattributes  .gitignore  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  embeddings.py  main.py  matching.py  models.py  search.py  worker.py
backend/app/ingest/: __init__.py  embed.py  extract.py  identify.py  items.py  persist.py  pipeline.py  segment.py
backend/app/routers/: __init__.py  search.py  sektionen.py  sitzungen.py  themen.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: test_identify.py  test_items.py
docs/: BESTANDSANALYSE.md  DATENMODELL.md  DEPLOYMENT.md  KONZEPT.md  PIPELINE.md
docs/adr/: 0001-lokales-llm.md  0002-postgres-pgvector.md  0003-eigene-benutzerverwaltung.md  0004-multiformat-heuristik-ingestion.md  0005-vps-docker.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
infra/: .env.example  Caddyfile  docker-compose.dev.yml  docker-compose.yml
scripts/: inventory.py  probe_extraction.sh
