[project]
name = "bl-protokollbuch-backend"
version = "0.1.0"
description = "Backend (FastAPI) für das BL-Protokollbuch/Wiki"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",   # JWT
    "argon2-cffi>=23.1",                # Passwort-Hashing
    "rq>=1.16",                         # Worker-Queue
    "redis>=5.0",
    # Ingestion (Phase 1):
    "pymupdf>=1.24",                    # PDF
    "python-docx>=1.1",                # DOCX
    "openpyxl>=3.1",                   # XLSX
    "httpx>=0.27",                      # Ollama-Client
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0", "mypy>=1.9"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
